# torch_jax_interop

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build.yaml  build.yml  docs.yaml  publish.yaml  publish.yml
docs/: index.md
docs/reference/: torch_jax_interop.md
reference/torch_jax_interop/: index.html
search/: search_index.json
torch_jax_interop/: __init__.py  __version__.py  conftest.py  docs_test.py  to_jax.py  to_jax_module.py  to_jax_module_test.py  to_jax_test.py  to_torch.py  to_torch_module.py  to_torch_module_test.py  to_torch_test.py  types.py  utils.py
torch_jax_interop/to_jax_test/test_use_torch_module_in_jax_graph/: seed_123_backend_cpu_TorchCNN_True.yaml  seed_123_backend_cpu_TorchFcNet_True.yaml  seed_123_backend_cuda_TorchCNN_False.yaml  seed_123_backend_cuda_TorchCNN_True.yaml  seed_123_backend_cuda_TorchFcNet_False.yaml  seed_123_backend_cuda_TorchFcNet_True.yaml
torch_jax_interop/to_torch_module_test/test_use_jax_module_in_torch_graph/: seed_123_backend_cpu_JaxFcNet.yaml  seed_123_backend_cuda_JaxCNN.yaml  seed_123_backend_cuda_JaxFcNet.yaml
torch_jax_interop/to_torch_module_test/test_use_jax_scalar_function_in_torch_graph/: seed_123_backend_cpu_JaxCNN.yaml  seed_123_backend_cpu_JaxFcNet.yaml  seed_123_backend_cuda_JaxCNN.yaml  seed_123_backend_cuda_JaxFcNet.yaml
torch_jax_interop/to_torch_test/test_use_jax_module_in_torch_graph/: seed_123_backend_cpu_JaxCNN.yaml
