[project]
name = "torch_jax_interop"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabrice Normandin", email = "fabrice.normandin@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.38",
    "torch>=2.5.1",
]


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "uv-dynamic-versioning>=0.2.0",
    "mkdocs-material>=9.5.44",
    "flax>=0.10.2",
    "tensor-regression>=0.0.8",
    "mktestdocs>=0.2.4",
    "pytest-benchmark>=5.1.0",
    "jax[cuda12]>=0.4.38",
]

[tool.pytest.ini_options]
testpaths = ["torch_jax_interop"]
norecursedirs = [".venv"]
addopts = ["--doctest-modules"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["torch_jax_interop"]

[tool.uv]
managed = true

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
